<resources>
    <string name="app_name">京东</string>

    <string name="loading">请稍后...</string>
    <string name="no_net">网络不可用,请检查你的网络</string>
    <string name="net_error">网络访问错误，请稍后再试</string>

    <string name="service_error">服务器出错</string>
    <string name="not_found">请求的资源不存在</string>
    <string name="timeout">请求超时</string>
    <string name="unexpected_error">未知错误</string>
    <string name="network_wrong">网络有问题</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="login_is_sure_intimity">登录即代表您已同意京东隐私策略</string>
    <string name="jd_login">京东登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="use_phone_register">手机快速注册</string>

</resources>
